# Wavelet-Noise-in-ray-tracing

./: .gitignore  CMakeLists.txt  CMakeLists.txt:Zone.Identifier  Makefile  README-en.md  README.md  README_perlin.md  WaveletNoise.h  aabb.h  color.h  hittable.h  hittable_list.h  interval.h  main  main.cpp  material.h  noise_utils.cpp  noise_utils.h  perlin.h  perlin_interactive.cpp  perlin_viewer.cpp  quad.h  ray.h  rtweekend.h  sphere.h  test_noise  test_noise.cpp  texture.h  vec2.h  vec3.h  wavelet.h  wavelet_noise  wavelet_noise.cpp  wavelet_noise_2d.cpp  wavelet_noise_2d.h
experient/: CMakeLists.txt  Makefile  analyze.py  main.cpp  visulize.ipynb  wavelet_noise  wavelet_noise.cpp  wavelet_noise_diagnostic.ipynb  wavelet_noise_visualization.ipynb
experient/result_raw/: perlin_noise_2D_octave_3.raw  perlin_noise_2D_octave_4.raw  perlin_noise_2D_octave_5.raw  perlin_noise_3Dsliced_octave_3.raw  perlin_noise_3Dsliced_octave_4.raw  perlin_noise_3Dsliced_octave_5.raw  wavelet_noise_2D_octave_3.raw  wavelet_noise_2D_octave_4.raw  wavelet_noise_2D_octave_5.raw  wavelet_noise_3Dprojected_octave_3.raw  wavelet_noise_3Dprojected_octave_4.raw  wavelet_noise_3Dprojected_octave_5.raw  wavelet_noise_3Dsliced_octave_3.raw  wavelet_noise_3Dsliced_octave_4.raw  wavelet_noise_3Dsliced_octave_5.raw
experient/test/: Makefile  analyze_filter  analyze_filter.cpp  analyzer.ipynb  wavelet_test.cpp  wavelet_test_check_energe_and_normalize_fail.cpp
experient/test2/: fixed_N_final_slice_z64_spectrum_magnitude.csv  fixed_N_intermediate_slice_z64_spectrum_magnitude.csv  wavelet_test  (+4 more)
(+99 files in other folders)
